<resources>
    <string name="app_name">eduCaching</string>
    <string name="action_settings">Settings</string>
    <string name="video_aufnehmen">Video aufnehmen</string>
    <string name="vorwaerts">Vorwärts</string>
    <string name="rueckwärts">Rückwärts</string>
    <string name="Station_1">Station 1</string>
    <string name="decide_route">Route auswählen</string>
    <string name="Route_1">Route 1</string>
    <string name="Head_Text">Lotuseffekt</string>
    <string name="Head_Text_Video">Lotuseffekt-Video</string>
    <string name="Lorem_Ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="layout_Bild_Beschreibung">Lotuseffekt</string>
    <string name="layout_Video_Beschreibung">Lotuseffekt-Video</string>
    <string name="title_activity_video_view">VideoViewActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_the_map">Show the map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="Play_Video">Play</string>
    <string name="Pause_Video">Pause</string>
    <string name="Stop_Video">Stop</string>
    <string name="shoot_foto_title">Nimm ein Foto zum Thema auf</string>
    <string name="country_prompt">Choose a country</string>
    <string name="Station_1_geschafft">Station 1 geschafft!</string>
    <string name="Station_1_abschließen">Station 1 abschließen</string>
    <string name="route1_station1">Route 1 Station1</string>
    <string name="route1_station2">Route 1 Station2</string>
    <string name="button_auswertung">AUSWERTUNG</string>
    <string name="text_fertig">Fertig!</string>
    <string name="button_gruppe_erstellen">neue Gruppe erstellen</string>
    <string name="text_erste_Seite">Das Projekt „mach Grün! Berufe entdecken und gestalten“ wird im Rahmen des ESF-Bundesprogramms „Berufsbildung für nachhaltige Entwicklung befördern. Über grüne Schlüsselkompetenzen zu klima- und ressourcenschonendem Handeln im Beruf – BBNE” durch das Bundesministerium für Umwelt, Naturschutz, Bau und Reaktorsicherheit und den Europäischen Sozialfonds gefördert.</string>

    <string name="hinweis_position_ermitteln">Meine Position anzeigen</string>

    <string name="Lorem_lang">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac</string>

    <string-array name="country_arrays">
        <item>Route 1</item>
        <item>Route 2</item>
    </string-array>
    <string name="title_activity_alle__stationen_geschafft">Alle_Stationen_geschafft</string>
    <string name="title_activity_capture_video">activity_capture_video</string>



</resources>
