<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.life.educaching.MainActivity">


        <include layout="@layout/content_main"
            android:layout_height="match_parent"
            android:layout_width="match_parent"

            android:layout_weight="1" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"

           >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:text="@string/Station_1"
                android:ems="10"
                android:id="@+id/text_head"
                android:textSize="60sp"
                android:textColor="@color/colorWhite"
                android:background="@color/live_e.v._green"
                android:textStyle="bold"
                android:paddingStart="70dp"
                android:paddingLeft="70dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:gravity="center_vertical"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorGrey_lines"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/Head_Text"
                android:ems="10"
                android:id="@+id/editText2"
                android:textColor="@color/colorGrey_text"
                android:textSize="40sp"
                android:paddingStart="70dp"
                android:paddingLeft="70dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"

                android:gravity="center_vertical"
                android:textStyle="bold"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="365dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:id="@+id/editText3"
                    android:text="@string/Lorem_Ipsum"
                    android:textColor="@color/colorGrey_text"
                    android:textSize="18sp"
                    android:layout_marginStart="70dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginRight="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1" />

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/lotuseffekt"
                        android:id="@+id/imageView"
                        android:layout_weight="1"
                        android:contentDescription="@string/layout_Bild_Beschreibung"
                        android:layout_marginStart="70dp"
                        android:layout_marginLeft="70dp"
                        android:layout_marginEnd="70dp"
                        android:layout_marginRight="70dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitStart"
                        />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey_lines"
                />

            <include layout="@layout/activity_button"/>


        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>